cluster/speedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: speedtest
  name: speedtest
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: speedtest-tls
      hosts:
        - speedtest.int.larshaugan.net
  rules:
  - host: speedtest.int.larshaugan.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: speedtest
              port:
                 number: 8080
